<resources>
    <string name="app_name">chat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="TextView1">USER LOGIN</string>
    <string name="TextView2">输入  ID:</string>
    <string name="TextView4">密    码:</string>
    <string name="TextView6">确认密码:</string>
    <string name="TextView8">邮    箱:</string>
    <string name="TextView10">性别</string>
    <string name="Button1">登陆</string>
    <string name="Button2">忘记密码?</string>
    <string name="Button3">会员注册</string>
    <string name="Button4">提交</string>
    <string name="title_activity_login">Login</string>
</resources>
