<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/a15"
    >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ImageView1"
            android:padding="30dp"
            android:src="@drawable/a12"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextView1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/TextView1"
            />
    </LinearLayout>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EditText1"
            android:hint="账号:"
            android:ems="15"
            android:background="@drawable/shape1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EditText2"
            android:hint="密码:"
            android:ems="15"
            android:background="@drawable/shape1"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="350dp"
            android:id="@+id/Button1"
            android:text="@string/Button1"
            android:background="@android:color/holo_blue_bright"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            />
      <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:padding="170dp"
        >
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/Button2"
            android:text="@string/Button2"
            android:background="@android:color/transparent"
            android:layout_marginLeft="2dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/Button3"
            android:text="@string/Button3"
            android:layout_gravity="right"
            android:layout_marginLeft="200dp"
            android:background="@drawable/shape"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextView11"
        android:text="jieshou"

        />
</LinearLayout>
