<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jiayuan.chat.Login"
    android:orientation="vertical"
    android:background="@drawable/a15"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="注册"
        android:textSize="40dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
       />
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="100dp"
      >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/TextView2"
         android:text="@string/TextView2"
    />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditText3"
        android:ems="13"
        android:hint="只能是数字或字母:"
        android:background="@drawable/shape1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextView3"
        android:text="＊必须填"
        android:textSize="20dp"
        android:textColor="@android:color/holo_red_dark"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextView4"
        android:text="@string/TextView4"
        android:layout_weight="1"
        />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EditText4"
            android:ems="13"
            android:hint="请输入:"
            android:inputType="textPassword"
            android:background="@drawable/shape1"
            android:layout_weight="3"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView5"
            android:text="＊必须填"
            android:textSize="20dp"
            android:textColor="@android:color/holo_red_dark"
            />

        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView6"
            android:text="@string/TextView6"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EditText5"
            android:ems="13"
            android:hint="请输入:"
            android:inputType="textPassword"
            android:background="@drawable/shape1"
            android:layout_weight="3"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView7"
            android:text="＊必须填"
            android:textSize="20dp"
            android:textColor="@android:color/holo_red_dark"
            />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView8"
            android:text="@string/TextView8"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EditText6"
            android:ems="13"
            android:hint="请输入:"
            android:background="@drawable/shape1"
            android:layout_weight="3"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView9"
            android:text="＊必须填"
            android:textSize="20dp"
            android:textColor="@android:color/holo_red_dark"
            />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="left"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/TextView10"
          android:text="@string/TextView10"
          />
    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/RadioGroup1"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/RadioButton1"
            android:text="男"
            android:checked="true"
            />
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/RadioButton2"
            android:text="女"
            android:checked="true"
            />
        </RadioGroup>
       </LinearLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="350dp"
        android:id="@+id/Button4"
        android:text="@string/Button4"
        android:background="@drawable/shape"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
       />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Button5"



        />
</LinearLayout>